--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -106,7 +106,7 @@ html {
     background-color: #f44336;
 }
 
-.slider-contain .slider:first-child {
+/* .slider-contain .slider:first-child {
     background-image: url('/assets/slider/chicago.jpg');
     padding-top: 50%;
     width: 100%;
@@ -134,6 +134,16 @@ html {
     margin-top: 46px;
     background-size: contain;
     position: relative;
+} */
+
+.slider-contain .slider {
+    position: relative;
+}
+
+.slider-contain .slider img {
+    width: 100%;
+    margin-top: 46px;
+
 }
 
 .slider-contain .slider .text-slider {
